--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# IPyFIXweb workspace/project Auto Generated Backup and temp files
+# IPyFIXweb workspace/project
+#  Local dev Jupyter Notebooks
+#  Auto Generated Backup and temp files
+*dev_local*.ipynb
 *.drawio.bkp
 *.drawio.dtmp
 
