--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.115.12 ; python_version >= "3.13" and python_version < "4.0"
-gunicorn==23.0.0 ; python_version >= "3.13" and python_version < "4.0"
+uvicorn-worker==0.3.0 ; python_version >= "3.13" and python_version < "4.0"
 uvicorn==0.34.2 ; python_version >= "3.13" and python_version < "4.0"
+gunicorn==23.0.0 ; python_version >= "3.13" and python_version < "4.0"
+fastapi==0.115.12 ; python_version >= "3.13" and python_version < "4.0"
 aiofile==3.9.0 ; python_version >= "3.13" and python_version < "4.0"
 aiopath==0.7.7 ; python_version >= "3.13" and python_version < "4.0"
 scapy==2.6.1 ; python_version >= "3.13" and python_version < "4.0"
