--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+pytest==8.4.2 ; python_version >= "3.13" and python_version < "4.0"
+httpx==0.28.1 ; python_version >= "3.13" and python_version < "4.0"
 uvicorn-worker==0.3.0 ; python_version >= "3.13" and python_version < "4.0"
 uvicorn==0.34.2 ; python_version >= "3.13" and python_version < "4.0"
 gunicorn==23.0.0 ; python_version >= "3.13" and python_version < "4.0"
